--- a/README.Rmd
+++ b/README.Rmd
@@ -52,6 +52,8 @@ Parsed from the [Florida's COVID-19 Data and Surveillance Dashboard][dashboard].
 
 ![](plots/covid-19-florida-county-top-6.png)
 
+![](plots/covid-19-florida-tests-per-case.png)
+
 ![](plots/covid-19-florida-change-new-cases.png)
 
 ![](plots/covid-19-florida-daily-test-changes.png)
