--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,7 @@
 ---
+title: "Florida COVID-19 Data"
 output: github_document
 ---
-
-# Florida COVID-19 Data
 
 ```{r include=FALSE}
 knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
