remove redundant plot from readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -54,7 +54,7 @@ Parsed from the [Florida's COVID-19 Data and Surveillance Dashboard][dashboard].
 
 ![](plots/covid-19-florida-tests-per-case.png)
 
-![](plots/covid-19-florida-change-new-cases.png)
+<!-- ![](plots/covid-19-florida-change-new-cases.png) -->
 
 ![](plots/covid-19-florida-tests-percent-positive.png)
 
