--- a/README.Rmd
+++ b/README.Rmd
@@ -7,6 +7,8 @@ bulma:
   hero_links:
     - name: Data and Code
       url: https://github.com/gadenbuie/covid19-florida
+    - name: News
+      url: NEWS.html
 output: 
   bulma::bulma_document:
     toc: true
@@ -19,16 +21,6 @@ knitr::opts_chunk$set(echo=FALSE, warning=FALSE, message=FALSE)
 library(dplyr)
 library(readr)
 library(lubridate)
-```
-
-```{css echo=FALSE}
-.hero.is-blue {
-  background-color: #3e78b2;
-  color: white;
-}
-.hero.is-blue .title, .hero.is-blue .subtitle {
-	color: white;
-}
 ```
 
 ## Today
@@ -151,3 +143,14 @@ and prefixed with `covid-19-florida_pdf_`.
 [main-page]: http://www.floridahealth.gov/diseases-and-conditions/COVID-19/
 [dashboard]: https://fdoh.maps.arcgis.com/apps/opsdashboard/index.html#/8d0de33f260d444c852a615dc7837c86
 [fl-disaster]: http://www.floridahealth.gov/diseases-and-conditions/COVID-19/
+
+
+```{css echo=FALSE}
+.hero.is-blue {
+  background-color: #3e78b2;
+  color: white;
+}
+.hero.is-blue .title, .hero.is-blue .subtitle {
+	color: white;
+}
+```
