fix side-by-side-plot on mobile

--- a/README.Rmd
+++ b/README.Rmd
@@ -94,11 +94,11 @@ I take snapshots of the various FL DOH data sources at 7am, noon and 7pm daily.
 
 ![](plots/covid-19-florida-county-top-6.png)
 
-<div class="columns is-desktop">
-<div class="column">
+<div class="columns">
+<div class="column is-full-mobile">
 ![](plots/covid-19-florida-testing.png)
 </div>
-<div class="column">
+<div class="column is-full-mobile">
 ![](plots/covid-19-florida-total-positive.png)
 </div>
 </div>
